--- a/SOPManagement/packages.config
+++ b/SOPManagement/packages.config
@@ -10,6 +10,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.19515.12000" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
