--- a/SOPManagement/SOPManagement.csproj
+++ b/SOPManagement/SOPManagement.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Models\fileupdateschedule.cs">
       <DependentUpon>SOPEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\FileRevision.cs" />
     <Compile Include="Models\SOPClass.cs" />
     <Compile Include="Models\SOPEDM.Context.cs">
       <AutoGen>True</AutoGen>
