--- a/SOPManagement/Web.config
+++ b/SOPManagement/Web.config
@@ -18,6 +18,8 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Windows" />
+    <sessionState mode="InProc" timeout="60" />
+
     <authorization>
       <deny users="?" />
     </authorization>
