--- a/SOPManagement/packages.config
+++ b/SOPManagement/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.10.0" targetFramework="net461" />
+  <package id="DocX" version="1.6.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Font.Awesome" version="5.13.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
