--- a/SOPManagement/Web.config
+++ b/SOPManagement/Web.config
@@ -20,8 +20,8 @@
     <add key="templocaldir" value="~/Content/DocFiles/" />
     <add key="logfilepathnm" value="~/Content/LogFile/SOPProcessLog.txt" />
     <add key="templatefilename" value="SOPTemplate.docx" />
-    <!--<add key="siteurl" value="https://radiantdelivers.sharepoint.com/sites/watercooler" />-->
-	 <add key="siteurl" value="https://radiantdelivers.sharepoint.com/sites/ITTeamSP" />
+    <add key="siteurl" value="https://radiantdelivers.sharepoint.com/sites/watercooler" />
+	 <!--<add key="siteurl" value="https://radiantdelivers.sharepoint.com/sites/ITTeamSP" />-->
     <add key="doclibraryname" value="SOP" />
     <add key="dashboardurl" value="http://camis1-bioasp01/Reports/Pages/Report.aspx?ItemPath=%2fSOP+Reports%2fSOP+Dashboard" />
   </appSettings>
@@ -78,14 +78,10 @@
   </system.codedom>
   <connectionStrings>
   
-	 <!--<add name="RadiantYYZEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=camis1-dbaasp01\general;initial catalog=RadiantYYZ;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SOPEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=camis1-dbaasp01\general;initial catalog=RadiantYYZ;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="RadiantYYZEntities1" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=camis1-dbaasp01\general;initial catalog=RadiantYYZ;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="RadiantYYZEntities2" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=camis1-dbaasp01\general;initial catalog=RadiantYYZ;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-   
-  <!--<add name="RadiantSOPEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CAMIS1-DBAASP01\General;initial catalog=RadiantYYZ;user id=sopuser;password=4s@pU; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+ 
+  <add name="RadiantSOPEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CAMIS1-DBAASP01\General;initial catalog=RadiantYYZ;user id=sopuser;password=4s@pU; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
-    <add name="RadiantSOPEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CAMIS1-DBAASD02\Development;initial catalog=RadiantYYZ;user id=sopuser;password=4s@pU; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="RadiantSOPEntities" connectionString="metadata=res://*/Models.SOPEDM.csdl|res://*/Models.SOPEDM.ssdl|res://*/Models.SOPEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CAMIS1-DBAASD02\Development;initial catalog=RadiantYYZ;user id=sopuser;password=4s@pU; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
 	
 </connectionStrings>
