--- a/SOPManagement/SOPManagement.csproj
+++ b/SOPManagement/SOPManagement.csproj
@@ -435,6 +435,7 @@
     <Content Include="Views\Home\LogIn.cshtml" />
     <Content Include="Views\Home\AdminSOP.cshtml" />
     <Content Include="Views\Home\DataMaintHRIT.cshtml" />
+    <Content Include="Views\Home\AccessArchive.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
